--- a/config.json
+++ b/config.json
@@ -35,16 +35,16 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61566369721724"
+    "100093647727130"
   ],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [
-      "61566369721724"
+      "100093647727130"
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "ADRIYAN 卝 ARYAN࿐ツ",
+  "nickNameBot": "SASUKE卝 BOT࿐ツ",
   "prefix": "/",
   "ArYanapi": "https://aryan-rest-api.onrender.com",
   "api": "",
