--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
   "16": "o",
   "17": "n",
   "facebookAccount": {
-    "email": "",
+    "email": "sasukeuchiwha2@gmail.com",
     "password": "",
     "2FASecret": "",
     "i_user": "",
@@ -53,7 +53,7 @@
   "authorName": "ArYan 🤡",
   "facebook2": "https://www.facebook.com/raj.vai.404",
   "facebook": "https://www.facebook.com/ArYan.com.404",
-  "email": "adriyanaryan@yahoo.com",
+  "email": "sasukeuchiwha2@gmail.com",
   "replit": "https://replit.com/@ARYAN-BOT",
   "github": "https://github.com/ARYAN-BOT-404",
   "insta": "no",
